--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,5 +1,5 @@
 body {
-  max-width: 375px;
+  // max-width: 375px;
   padding: 0%;
   margin: 0;
   font-family: 'Roboto', sans-serif;
@@ -82,7 +82,7 @@ body {
   background-color: #f6f6f6;
   flex-direction: column;
   align-items: center;
-  padding: 15px 15px 40px 15px;
+  padding: 15px 0px 40px 0px;
 }
 
 .sec2_heading {
@@ -123,8 +123,14 @@ body {
   }
 }
 
+.sec2-3 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .sec3_info-blocks {
-  margin: 45px 0px;
+  margin: 45px 0px 0px 0px;
 
   .sec3_heading {
     padding-left: 15px;
@@ -360,18 +366,20 @@ footer {
   }
 }
 
-@media (min-width:600px) {
+@media (min-width:635px) {
   body {
     max-width: inherit;
   }
 
   .sec2-3 {
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: space-around;
   }
 
   .section2 {
+    width: 400px;
     gap: 33px;
     margin-left: 25px;
     border-radius: 30px;
@@ -417,7 +425,7 @@ footer {
 
 @media (min-width: 992px) {
   body {
-    max-width: inherit;
+    max-width: 100%;
   }
 
   .sec3_info-blocks {
