--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -1,5 +1,5 @@
 body {
-  max-width: 375px;
+  // max-width: 375px;
   padding: 0%;
   margin: 0;
   font-family: $font-primary;
